@@ -1,6 +1,12 @@
 2009-04-11  Jesse van den Kieboom  <jessevdk@gnome.org>
 	
 	* gtksourceview/gtksourcecompletiontriggerkey.c:
+
+	Fixed documentation
+
+2009-04-11  Jesse van den Kieboom  <jessevdk@gnome.org>
+	
+	* gtksourceview/gtksourcecompletiontriggerkey.c:
 	
 	Implemented completion unref in dispose
 
